--- a/SQLChangeTracker/appsettings.json
+++ b/SQLChangeTracker/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Data Source=172.17.96.40;Database=LoadDatabase;User=mohammad_s;Password=Aa123456@S;",
+  "ConnectionString": "Data Source=.;Database=MADSSO;User=Username;Password=strongpass;integrated Security=True;",
   "AllowedHosts": "*"
 }
